2003-06-18  Bradley Bell  <btb@icculus.org>

	* main/movie.c: fixed cfile conversion of movielib code

	* main/console.c, main/hud.c: strip out colors, etc when printing
	to stdout

	* include/u_mem.h: fix NDEBUG calloc macro

2003-06-15  Bradley Bell  <btb@icculus.org>

	* include/fileutil.h, misc/Makefile.am, misc/fileutil.c: removed
	old fileutil stuff

	* 2d/pcx.c, include/strio.h, main/ai.c, main/ai.h,
	main/cntrlcen.c, main/config.c, main/gamesave.c, main/gameseq.c,
	main/movie.c, main/multi.c, main/network.c, main/newdemo.c,
	main/newmenu.c, main/piggy.c, main/playsave.c, main/polyobj.c,
	main/scores.c, main/state.c, main/text.c, misc/args.c,
	misc/strio.c: convert file i/o to cfile

2003-06-14  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, cfile/cfile.c: implemented cfile wrappers for
	writing and other modes besides "rb" (mostly taken from
	freespace2)

2003-06-09  Bradley Bell  <btb@icculus.org>

	* 2d/palette.c, main/kludge.c: gr_copy_palette not really a
	kludge, I think

	* include/libmve.h, libmve/mve_main.c, libmve/mvelib.c,
	libmve/mvelib.h, libmve/mveplay.c, main/movie.c: merged libmve
	from physfs branch

2003-06-07  Taylor Richards  <taylor@icculus.org>

	* libmve/mvelib.c, libmve/mveplay.c: stop memory leaks in libmve

2003-06-07  Bradley Bell  <btb@icculus.org>

	* main/console.c: fix non-console build

	* main/gamesave.c: comments

	* main/bm.c: remove redundant break

2003-06-06  Bradley Bell  <btb@icculus.org>

	* main/gauges.c, main/kconfig.c: comments/formatting

	* console/.cvsignore: added .cvsignore

	* main/console.c: can't write to console after it's closed

2003-06-05  Bradley Bell  <btb@icculus.org>

	* arch/sdl/event.c, console/CON_console.c, console/Makefile.am,
	console/internal.c, console/internal.h, include/CON_console.h,
	include/console.h, main/console.c, main/gamecntl.c, main/hud.c:
	finish console conversion away from SDL

2003-06-04  Bradley Bell  <btb@icculus.org>
