@@ -1,3 +1,7 @@
+2003-06-22  Bradley Bell  <btb@icculus.org>
+
+	* main/movie.c: use con_printf for missing movie warning
+
 2003-06-18  Bradley Bell  <btb@icculus.org>
 
 	* main/movie.c: fixed cfile conversion of movielib code
